Fix dark mode rendering of the probabl logo

--- a/doc/scss/custom.scss
+++ b/doc/scss/custom.scss
@@ -296,6 +296,7 @@ div.sk-text-image-grid-large {
 
   .sk-funding-logos img {
     max-width: 80%;
+    padding: 5px;
     height: auto !important;
     width: auto;
     display: inline-block;
